Include stderr in compile windows and add help